Deploy: update bike site

--- a/et/index.html
+++ b/et/index.html
@@ -7,7 +7,7 @@
 
   
   <title>Privaatne Rattasõidu Analüütika - FTP, TSS Mõõdikud iOS-ile</title>
-  <meta name="description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele. 7-päevane tasuta prooviperiood.">
+  <meta name="description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele...">
   <meta name="author" content="Albert Arno">
 
   
@@ -29,7 +29,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bike.analyticszone.app/et/">
   <meta property="og:title" content="Privaatne Rattasõidu Analüütika - FTP, TSS Mõõdikud iOS-ile">
-  <meta property="og:description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele. 7-päevane tasuta prooviperiood.">
+  <meta property="og:description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele...">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -40,7 +40,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/et/">
   <meta name="twitter:title" content="Privaatne Rattasõidu Analüütika - FTP, TSS Mõõdikud iOS-ile">
-  <meta name="twitter:description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele. 7-päevane tasuta prooviperiood.">
+  <meta name="twitter:description" content="Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele...">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -718,7 +718,7 @@ img[width][height] {
       "@context": "https://schema.org",
       "@type": "WebPage",
       "name": "Privaatne Rattasõidu Analüütika - FTP, TSS Mõõdikud iOS-ile",
-      "description": "Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele. 7-päevane tasuta prooviperiood.",
+      "description": "Privaatne iOS-i rattasõidu rakendus edasijõudnud analüütikaga. Jälgi FTP, TSS ja võimsusnäitajaid lokaalselt. Teaduspõhised treeningu sisevaated ratturitele...",
       "url": "https://bike.analyticszone.app/et/",
       "isPartOf": {
         "@type": "WebSite",
