--- a/et/support/index.html
+++ b/et/support/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Tugi - Bike Analytics</title>
-  <meta name="description" content="Saa abi Bike Analyticsiga. Korduma kippuvad küsimused, kontakt ja tugi rattasõidu rakendusele.">
+  <title>Tugi ja Abi - Bike Analytics - Cycling Analytics App | FTP, TSS...</title>
+  <meta name="description" content="Saa abi Bike Analyticsiga. On küsimusi? Oleme siin, et aidata. Tehnilise toe, funktsioonisoovide või üldiste küsimuste korral palun kirjuta:">
   <meta name="author" content="Albert Arno">
 
   
@@ -28,8 +28,8 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/et/support/">
-  <meta property="og:title" content="Tugi - Bike Analytics">
-  <meta property="og:description" content="Saa abi Bike Analyticsiga. Korduma kippuvad küsimused, kontakt ja tugi rattasõidu rakendusele.">
+  <meta property="og:title" content="Tugi ja Abi - Bike Analytics - Cycling Analytics App | FTP, TSS...">
+  <meta property="og:description" content="Saa abi Bike Analyticsiga. On küsimusi? Oleme siin, et aidata. Tehnilise toe, funktsioonisoovide või üldiste küsimuste korral palun kirjuta:">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -39,8 +39,8 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/et/support/">
-  <meta name="twitter:title" content="Tugi - Bike Analytics">
-  <meta name="twitter:description" content="Saa abi Bike Analyticsiga. Korduma kippuvad küsimused, kontakt ja tugi rattasõidu rakendusele.">
+  <meta name="twitter:title" content="Tugi ja Abi - Bike Analytics - Cycling Analytics App | FTP, TSS...">
+  <meta name="twitter:description" content="Saa abi Bike Analyticsiga. On küsimusi? Oleme siin, et aidata. Tehnilise toe, funktsioonisoovide või üldiste küsimuste korral palun kirjuta:">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
