--- a/et/terms/index.html
+++ b/et/terms/index.html
@@ -7,7 +7,7 @@
 
   
   <title>Kasutustingimused - Bike Analytics</title>
-  <meta name="description" content="Bike Analyticsi kasutustingimused: kasutustingimused, litsentsileping ja kasutaja kohustused.">
+  <meta name="description" content="(English Version / Legal text in English) Last Updated: January 10, 2025 These Terms and Conditions (&#34;Terms&#34;) govern your use of the Bike Analytics mobile application...">
   <meta name="author" content="Albert Arno">
 
   
@@ -29,7 +29,7 @@
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/et/terms/">
   <meta property="og:title" content="Kasutustingimused - Bike Analytics">
-  <meta property="og:description" content="Bike Analyticsi kasutustingimused: kasutustingimused, litsentsileping ja kasutaja kohustused.">
+  <meta property="og:description" content="(English Version / Legal text in English) Last Updated: January 10, 2025 These Terms and Conditions (&#34;Terms&#34;) govern your use of the Bike Analytics mobile application...">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -40,7 +40,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/et/terms/">
   <meta name="twitter:title" content="Kasutustingimused - Bike Analytics">
-  <meta name="twitter:description" content="Bike Analyticsi kasutustingimused: kasutustingimused, litsentsileping ja kasutaja kohustused.">
+  <meta name="twitter:description" content="(English Version / Legal text in English) Last Updated: January 10, 2025 These Terms and Conditions (&#34;Terms&#34;) govern your use of the Bike Analytics mobile application...">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
