--- a/et/thanks/index.html
+++ b/et/thanks/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Aitäh - Bike Analytics</title>
-  <meta name="description" content="Aitäh, et võtsid ühendust Bike Analyticsiga. Vastame sulle varsti.">
+  <title>Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...</title>
+  <meta name="description" content="Thank You! Your message has been sent successfully. We&#39;ll get back to you as soon as possible, usually within 24-48 hours.">
   <meta name="author" content="Albert Arno">
 
   
@@ -28,8 +28,8 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/et/thanks/">
-  <meta property="og:title" content="Aitäh - Bike Analytics">
-  <meta property="og:description" content="Aitäh, et võtsid ühendust Bike Analyticsiga. Vastame sulle varsti.">
+  <meta property="og:title" content="Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...">
+  <meta property="og:description" content="Thank You! Your message has been sent successfully. We&#39;ll get back to you as soon as possible, usually within 24-48 hours.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -39,8 +39,8 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/et/thanks/">
-  <meta name="twitter:title" content="Aitäh - Bike Analytics">
-  <meta name="twitter:description" content="Aitäh, et võtsid ühendust Bike Analyticsiga. Vastame sulle varsti.">
+  <meta name="twitter:title" content="Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...">
+  <meta name="twitter:description" content="Thank You! Your message has been sent successfully. We&#39;ll get back to you as soon as possible, usually within 24-48 hours.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
   
@@ -490,8 +490,8 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Aitäh - Bike Analytics",
-      "description": "Aitäh, et võtsid ühendust Bike Analyticsiga. Vastame sulle varsti.",
+      "headline": "Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...",
+      "description": "Thank You! Your message has been sent successfully. We&#39;ll get back to you as soon as possible, usually within 24-48 hours.",
       "author": {
         "@type": "Person",
         "name": "Albert Arno"
