Deploy: fix A11y issues and optimize assets

--- a/am/aerodynamics/index.html
+++ b/am/aerodynamics/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Aerodynamics</title>
+  <title>Cycling Aerodynamics: CdA, Drafting, Position Optimization - Bike...</title>
   <meta name="description" content="Complete guide to cycling aerodynamics: CdA estimation, drafting benefits, position optimization, and aero equipment choices.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/aerodynamics/">
-  <meta property="og:title" content="Bike Analytics - Aerodynamics">
+  <meta property="og:title" content="Cycling Aerodynamics: CdA, Drafting, Position Optimization - Bike...">
   <meta property="og:description" content="Complete guide to cycling aerodynamics: CdA estimation, drafting benefits, position optimization, and aero equipment choices.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/aerodynamics/">
-  <meta name="twitter:title" content="Bike Analytics - Aerodynamics">
+  <meta name="twitter:title" content="Cycling Aerodynamics: CdA, Drafting, Position Optimization - Bike...">
   <meta name="twitter:description" content="Complete guide to cycling aerodynamics: CdA estimation, drafting benefits, position optimization, and aero equipment choices.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Aerodynamics",
+      "headline": "Cycling Aerodynamics: CdA, Drafting, Position Optimization - Bike...",
       "description": "Complete guide to cycling aerodynamics: CdA estimation, drafting benefits, position optimization, and aero equipment choices.",
       "author": {
         "@type": "Person",
