--- a/am/efficiency/index.html
+++ b/am/efficiency/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Efficiency</title>
+  <title>Cycling Efficiency Metrics - Bike Analytics - Cycling Analytics...</title>
   <meta name="description" content="Learn cycling efficiency metrics: power-to-weight ratio, aerobic efficiency, mechanical efficiency, and gross efficiency.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/efficiency/">
-  <meta property="og:title" content="Bike Analytics - Efficiency">
+  <meta property="og:title" content="Cycling Efficiency Metrics - Bike Analytics - Cycling Analytics...">
   <meta property="og:description" content="Learn cycling efficiency metrics: power-to-weight ratio, aerobic efficiency, mechanical efficiency, and gross efficiency.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/efficiency/">
-  <meta name="twitter:title" content="Bike Analytics - Efficiency">
+  <meta name="twitter:title" content="Cycling Efficiency Metrics - Bike Analytics - Cycling Analytics...">
   <meta name="twitter:description" content="Learn cycling efficiency metrics: power-to-weight ratio, aerobic efficiency, mechanical efficiency, and gross efficiency.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Efficiency",
+      "headline": "Cycling Efficiency Metrics - Bike Analytics - Cycling Analytics...",
       "description": "Learn cycling efficiency metrics: power-to-weight ratio, aerobic efficiency, mechanical efficiency, and gross efficiency.",
       "author": {
         "@type": "Person",
