--- a/am/formulas/index.html
+++ b/am/formulas/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Formulas</title>
+  <title>Cycling Power Formulas - Bike Analytics - Cycling Analytics App |...</title>
   <meta name="description" content="Complete cycling power formulas: TSS calculation, NP algorithm, IF formula, CP model equations, and W&#39;bal tracking.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/formulas/">
-  <meta property="og:title" content="Bike Analytics - Formulas">
+  <meta property="og:title" content="Cycling Power Formulas - Bike Analytics - Cycling Analytics App |...">
   <meta property="og:description" content="Complete cycling power formulas: TSS calculation, NP algorithm, IF formula, CP model equations, and W&#39;bal tracking.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/formulas/">
-  <meta name="twitter:title" content="Bike Analytics - Formulas">
+  <meta name="twitter:title" content="Cycling Power Formulas - Bike Analytics - Cycling Analytics App |...">
   <meta name="twitter:description" content="Complete cycling power formulas: TSS calculation, NP algorithm, IF formula, CP model equations, and W&#39;bal tracking.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Formulas",
+      "headline": "Cycling Power Formulas - Bike Analytics - Cycling Analytics App |...",
       "description": "Complete cycling power formulas: TSS calculation, NP algorithm, IF formula, CP model equations, and W&#39;bal tracking.",
       "author": {
         "@type": "Person",
