--- a/am/ftp/index.html
+++ b/am/ftp/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Ftp</title>
+  <title>Functional Threshold Power (FTP) - Bike Analytics - Cycling...</title>
   <meta name="description" content="Free FTP test calculator for cyclists. Measure Functional Threshold Power in 20-minute test, discover training zones, optimize power work.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/ftp/">
-  <meta property="og:title" content="Bike Analytics - Ftp">
+  <meta property="og:title" content="Functional Threshold Power (FTP) - Bike Analytics - Cycling...">
   <meta property="og:description" content="Free FTP test calculator for cyclists. Measure Functional Threshold Power in 20-minute test, discover training zones, optimize power work.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/ftp/">
-  <meta name="twitter:title" content="Bike Analytics - Ftp">
+  <meta name="twitter:title" content="Functional Threshold Power (FTP) - Bike Analytics - Cycling...">
   <meta name="twitter:description" content="Free FTP test calculator for cyclists. Measure Functional Threshold Power in 20-minute test, discover training zones, optimize power work.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Ftp",
+      "headline": "Functional Threshold Power (FTP) - Bike Analytics - Cycling...",
       "description": "Free FTP test calculator for cyclists. Measure Functional Threshold Power in 20-minute test, discover training zones, optimize power work.",
       "author": {
         "@type": "Person",
