--- a/am/privacy/index.html
+++ b/am/privacy/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Privacy</title>
+  <title>ግላዊነት - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...</title>
   <meta name="description" content="Bike Analytics privacy policy: 100% local data processing, no cloud storage, no tracking, complete data ownership.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/privacy/">
-  <meta property="og:title" content="Bike Analytics - Privacy">
+  <meta property="og:title" content="ግላዊነት - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta property="og:description" content="Bike Analytics privacy policy: 100% local data processing, no cloud storage, no tracking, complete data ownership.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/privacy/">
-  <meta name="twitter:title" content="Bike Analytics - Privacy">
+  <meta name="twitter:title" content="ግላዊነት - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta name="twitter:description" content="Bike Analytics privacy policy: 100% local data processing, no cloud storage, no tracking, complete data ownership.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
