--- a/am/thanks/index.html
+++ b/am/thanks/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Thanks</title>
+  <title>Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...</title>
   <meta name="description" content="Thank you for contacting Bike Analytics. We&#39;ll get back to you soon. Thank You - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/thanks/">
-  <meta property="og:title" content="Bike Analytics - Thanks">
+  <meta property="og:title" content="Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...">
   <meta property="og:description" content="Thank you for contacting Bike Analytics. We&#39;ll get back to you soon. Thank You - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/thanks/">
-  <meta name="twitter:title" content="Bike Analytics - Thanks">
+  <meta name="twitter:title" content="Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...">
   <meta name="twitter:description" content="Thank you for contacting Bike Analytics. We&#39;ll get back to you soon. Thank You - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Thanks",
+      "headline": "Thank You! - Bike Analytics - Cycling Analytics App | FTP, TSS...",
       "description": "Thank you for contacting Bike Analytics. We&#39;ll get back to you soon. Thank You - Bike Analytics | Bike Analytics - Cycling Analytics App |",
       "author": {
         "@type": "Person",
