--- a/cs/support/index.html
+++ b/cs/support/index.html
@@ -996,9 +996,9 @@ img[width][height] {
 
         <div class="grid grid-2 mb-3xl">
             <div class="card">
-                <h3>Často kladené otázky</h3>
-                <p class="mb-lg">Rychlé odpovědi na nejčastější dotazy ohledně měření výkonu, FTP a funkcí aplikace.</p>
-                <a href="/cs/faq/" class="btn btn-secondary">Prohlédnout FAQ</a>
+                <h3>Začínáme</h3>
+                <p class="mb-lg">Průvodce nastavením aplikace, měřením výkonu a základními funkcemi.</p>
+                <a href="/cs/getting-started/" class="btn btn-secondary">Začít</a>
             </div>
             <div class="card">
                 <h3>Vědecké metriky</h3>
