--- a/cs/thanks/index.html
+++ b/cs/thanks/index.html
@@ -1033,7 +1033,7 @@ img[width][height] {
 
             <div class="mt-xl">
                 <a href="/cs/" class="btn btn-primary">Zpět na úvod</a>
-                <a href="/cs/faq/" class="btn btn-secondary ml-sm">Prohlédnout FAQ</a>
+                <a href="/cs/getting-started/" class="btn btn-secondary ml-sm">Začít</a>
             </div>
         </div>
 
