--- a/pt-br/about/index.html
+++ b/pt-br/about/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - About</title>
+  <title>About Bike Analytics - Bike Analytics - Cycling Analytics App |...</title>
   <meta name="description" content="Learn about Bike Analytics: privacy-first cycling analytics app, mission, team, and commitment to local data processing.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/pt-br/about/">
-  <meta property="og:title" content="Bike Analytics - About">
+  <meta property="og:title" content="About Bike Analytics - Bike Analytics - Cycling Analytics App |...">
   <meta property="og:description" content="Learn about Bike Analytics: privacy-first cycling analytics app, mission, team, and commitment to local data processing.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/pt-br/about/">
-  <meta name="twitter:title" content="Bike Analytics - About">
+  <meta name="twitter:title" content="About Bike Analytics - Bike Analytics - Cycling Analytics App |...">
   <meta name="twitter:description" content="Learn about Bike Analytics: privacy-first cycling analytics app, mission, team, and commitment to local data processing.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - About",
+      "headline": "About Bike Analytics - Bike Analytics - Cycling Analytics App |...",
       "description": "Learn about Bike Analytics: privacy-first cycling analytics app, mission, team, and commitment to local data processing.",
       "author": {
         "@type": "Person",
