--- a/pt-br/contact/index.html
+++ b/pt-br/contact/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Contact</title>
+  <title>Contact Bike Analytics - Bike Analytics - Cycling Analytics App |...</title>
   <meta name="description" content="Contact Bike Analytics team: support, feature requests, partnerships, and feedback. We&#39;re here to help.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/pt-br/contact/">
-  <meta property="og:title" content="Bike Analytics - Contact">
+  <meta property="og:title" content="Contact Bike Analytics - Bike Analytics - Cycling Analytics App |...">
   <meta property="og:description" content="Contact Bike Analytics team: support, feature requests, partnerships, and feedback. We&#39;re here to help.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/pt-br/contact/">
-  <meta name="twitter:title" content="Bike Analytics - Contact">
+  <meta name="twitter:title" content="Contact Bike Analytics - Bike Analytics - Cycling Analytics App |...">
   <meta name="twitter:description" content="Contact Bike Analytics team: support, feature requests, partnerships, and feedback. We&#39;re here to help.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
