--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Index</title>
+  <title>Train Smarter, Ride Faster, Climb Stronger - Bike Analytics -...</title>
   <meta name="description" content="Private iOS cycling app with advanced analytics. Track FTP, TSS, power metrics locally. Science-based training insights for cyclists. 7-day free trial.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bike.analyticszone.app/pt-br/">
-  <meta property="og:title" content="Bike Analytics - Index">
+  <meta property="og:title" content="Train Smarter, Ride Faster, Climb Stronger - Bike Analytics -...">
   <meta property="og:description" content="Private iOS cycling app with advanced analytics. Track FTP, TSS, power metrics locally. Science-based training insights for cyclists. 7-day free trial.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/pt-br/">
-  <meta name="twitter:title" content="Bike Analytics - Index">
+  <meta name="twitter:title" content="Train Smarter, Ride Faster, Climb Stronger - Bike Analytics -...">
   <meta name="twitter:description" content="Private iOS cycling app with advanced analytics. Track FTP, TSS, power metrics locally. Science-based training insights for cyclists. 7-day free trial.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -729,7 +729,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Bike Analytics - Index",
+      "name": "Train Smarter, Ride Faster, Climb Stronger - Bike Analytics -...",
       "description": "Private iOS cycling app with advanced analytics. Track FTP, TSS, power metrics locally. Science-based training insights for cyclists. 7-day free trial.",
       "url": "https://bike.analyticszone.app/pt-br/",
       "isPartOf": {
