--- a/pt-br/research/index.html
+++ b/pt-br/research/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Research</title>
+  <title>Research Behind Bike Analytics - Bike Analytics - Cycling...</title>
   <meta name="description" content="Research behind Bike Analytics: FTP studies, Critical Power model, TSS validation, and power-based training science.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/pt-br/research/">
-  <meta property="og:title" content="Bike Analytics - Research">
+  <meta property="og:title" content="Research Behind Bike Analytics - Bike Analytics - Cycling...">
   <meta property="og:description" content="Research behind Bike Analytics: FTP studies, Critical Power model, TSS validation, and power-based training science.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/pt-br/research/">
-  <meta name="twitter:title" content="Bike Analytics - Research">
+  <meta name="twitter:title" content="Research Behind Bike Analytics - Bike Analytics - Cycling...">
   <meta name="twitter:description" content="Research behind Bike Analytics: FTP studies, Critical Power model, TSS validation, and power-based training science.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Research",
+      "headline": "Research Behind Bike Analytics - Bike Analytics - Cycling...",
       "description": "Research behind Bike Analytics: FTP studies, Critical Power model, TSS validation, and power-based training science.",
       "author": {
         "@type": "Person",
