--- a/pt-br/road-vs-mtb/index.html
+++ b/pt-br/road-vs-mtb/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Road Vs Mtb</title>
+  <title>Road vs MTB Cycling - Why Power Profiles Are Completely Different...</title>
   <meta name="description" content="Understanding power profile differences between road cycling and mountain biking: VI, smoothness, burst patterns, and training implications.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/pt-br/road-vs-mtb/">
-  <meta property="og:title" content="Bike Analytics - Road Vs Mtb">
+  <meta property="og:title" content="Road vs MTB Cycling - Why Power Profiles Are Completely Different...">
   <meta property="og:description" content="Understanding power profile differences between road cycling and mountain biking: VI, smoothness, burst patterns, and training implications.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/pt-br/road-vs-mtb/">
-  <meta name="twitter:title" content="Bike Analytics - Road Vs Mtb">
+  <meta name="twitter:title" content="Road vs MTB Cycling - Why Power Profiles Are Completely Different...">
   <meta name="twitter:description" content="Understanding power profile differences between road cycling and mountain biking: VI, smoothness, burst patterns, and training implications.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Road Vs Mtb",
+      "headline": "Road vs MTB Cycling - Why Power Profiles Are Completely Different...",
       "description": "Understanding power profile differences between road cycling and mountain biking: VI, smoothness, burst patterns, and training implications.",
       "author": {
         "@type": "Person",
