--- a/ta/bibliography/index.html
+++ b/ta/bibliography/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Bibliography</title>
+  <title>Complete Scientific Bibliography - Bike Analytics - Cycling...</title>
   <meta name="description" content="Complete scientific bibliography for cycling analytics: FTP, Critical Power, TSS, power-based training research papers and books.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/ta/bibliography/">
-  <meta property="og:title" content="Bike Analytics - Bibliography">
+  <meta property="og:title" content="Complete Scientific Bibliography - Bike Analytics - Cycling...">
   <meta property="og:description" content="Complete scientific bibliography for cycling analytics: FTP, Critical Power, TSS, power-based training research papers and books.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/ta/bibliography/">
-  <meta name="twitter:title" content="Bike Analytics - Bibliography">
+  <meta name="twitter:title" content="Complete Scientific Bibliography - Bike Analytics - Cycling...">
   <meta name="twitter:description" content="Complete scientific bibliography for cycling analytics: FTP, Critical Power, TSS, power-based training research papers and books.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Bibliography",
+      "headline": "Complete Scientific Bibliography - Bike Analytics - Cycling...",
       "description": "Complete scientific bibliography for cycling analytics: FTP, Critical Power, TSS, power-based training research papers and books.",
       "author": {
         "@type": "Person",
