--- a/ta/comparisons/index.html
+++ b/ta/comparisons/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Comparisons</title>
+  <title>Cycling Analytics Platform Comparisons - Find the Best App for You...</title>
   <meta name="description" content="Compare cycling analytics platforms: TrainingPeaks, WKO5, Intervals.icu, Golden Cheetah, and Bike Analytics. Features, pricing, privacy.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/ta/comparisons/">
-  <meta property="og:title" content="Bike Analytics - Comparisons">
+  <meta property="og:title" content="Cycling Analytics Platform Comparisons - Find the Best App for You...">
   <meta property="og:description" content="Compare cycling analytics platforms: TrainingPeaks, WKO5, Intervals.icu, Golden Cheetah, and Bike Analytics. Features, pricing, privacy.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/ta/comparisons/">
-  <meta name="twitter:title" content="Bike Analytics - Comparisons">
+  <meta name="twitter:title" content="Cycling Analytics Platform Comparisons - Find the Best App for You...">
   <meta name="twitter:description" content="Compare cycling analytics platforms: TrainingPeaks, WKO5, Intervals.icu, Golden Cheetah, and Bike Analytics. Features, pricing, privacy.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Comparisons",
+      "headline": "Cycling Analytics Platform Comparisons - Find the Best App for You...",
       "description": "Compare cycling analytics platforms: TrainingPeaks, WKO5, Intervals.icu, Golden Cheetah, and Bike Analytics. Features, pricing, privacy.",
       "author": {
         "@type": "Person",
