--- a/te/road-cycling/index.html
+++ b/te/road-cycling/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Road Cycling</title>
+  <title>Road Cycling Analytics - Optimize Your Performance on the Road -...</title>
   <meta name="description" content="Specialized analytics for road cycling: steady power profiles, aero optimization, pacing strategies, and road-specific training.">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/te/road-cycling/">
-  <meta property="og:title" content="Bike Analytics - Road Cycling">
+  <meta property="og:title" content="Road Cycling Analytics - Optimize Your Performance on the Road -...">
   <meta property="og:description" content="Specialized analytics for road cycling: steady power profiles, aero optimization, pacing strategies, and road-specific training.">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/te/road-cycling/">
-  <meta name="twitter:title" content="Bike Analytics - Road Cycling">
+  <meta name="twitter:title" content="Road Cycling Analytics - Optimize Your Performance on the Road -...">
   <meta name="twitter:description" content="Specialized analytics for road cycling: steady power profiles, aero optimization, pacing strategies, and road-specific training.">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -502,7 +502,7 @@ img[width][height] {
     {
       "@context": "https://schema.org",
       "@type": "Article",
-      "headline": "Bike Analytics - Road Cycling",
+      "headline": "Road Cycling Analytics - Optimize Your Performance on the Road -...",
       "description": "Specialized analytics for road cycling: steady power profiles, aero optimization, pacing strategies, and road-specific training.",
       "author": {
         "@type": "Person",
