--- a/te/support/index.html
+++ b/te/support/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Support</title>
+  <title>Support - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...</title>
   <meta name="description" content="Get help with Bike Analytics. Frequently asked questions, contact, and support for the cycling app. Support - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/te/support/">
-  <meta property="og:title" content="Bike Analytics - Support">
+  <meta property="og:title" content="Support - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta property="og:description" content="Get help with Bike Analytics. Frequently asked questions, contact, and support for the cycling app. Support - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/te/support/">
-  <meta name="twitter:title" content="Bike Analytics - Support">
+  <meta name="twitter:title" content="Support - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta name="twitter:description" content="Get help with Bike Analytics. Frequently asked questions, contact, and support for the cycling app. Support - Bike Analytics | Bike Analytics - Cycling Analytics App |">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
