--- a/am/terms/index.html
+++ b/am/terms/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   
-  <title>Bike Analytics - Terms</title>
+  <title>ውሎች - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...</title>
   <meta name="description" content="Bike Analytics terms of service: usage terms, license agreement, and user responsibilities. Terms of Service - Bike Analytics">
   <meta name="author" content="Albert Arno">
 
@@ -28,7 +28,7 @@
   
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://bike.analyticszone.app/am/terms/">
-  <meta property="og:title" content="Bike Analytics - Terms">
+  <meta property="og:title" content="ውሎች - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta property="og:description" content="Bike Analytics terms of service: usage terms, license agreement, and user responsibilities. Terms of Service - Bike Analytics">
   
   <meta property="og:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
@@ -39,7 +39,7 @@
   
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://bike.analyticszone.app/am/terms/">
-  <meta name="twitter:title" content="Bike Analytics - Terms">
+  <meta name="twitter:title" content="ውሎች - Bike Analytics - Cycling Analytics App | FTP, TSS, Power...">
   <meta name="twitter:description" content="Bike Analytics terms of service: usage terms, license agreement, and user responsibilities. Terms of Service - Bike Analytics">
   
   <meta name="twitter:image" content="https://bike.analyticszone.app/assets/images/og-image.svg">
